--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -21,3 +21,53 @@
   right: 0;
   z-index: 10;
 }
+
+.popup__input-error {
+  display: block; /* Используем block или inline-block */
+  visibility: hidden; /* Скрываем элемент по умолчанию */
+  height: 20px; /* Зарезервируем место для сообщения */
+  color: #FF0000; /* Цвет текста ошибки */
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.popup__input-error_visible {
+  visibility: visible; /* Показываем сообщение, если оно есть */
+}
+
+.popup__save-button_disabled {
+  background-color: #FFFFFF; /* Цвет неактивной кнопки из макета */
+  cursor: not-allowed;
+  color: #C4C4C4; /* Цвет текста неактивной кнопки */
+  border: 1px solid #C4C4C4; /* Цвет обводки такой же, как и цвет текста */
+}
+
+.popup__button_active {
+  background-color: #000; /* Цвет активной кнопки */
+  color: white;
+  cursor: pointer;
+}
+
+.popup_type_confirm {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+  justify-content: center;
+  align-items: center;
+}
+
+.popup_type_confirm.popup_is-opened {
+  display: flex; 
+}
+
+.popup_type_confirm .popup__content {
+  background-color: white;
+  padding: 40px;
+  border-radius: 10px;
+  text-align: center;
+  width: 400px;
+}
