--- a/src/blocks/card/__like-button/card__like-container.css
+++ b/src/blocks/card/__like-button/card__like-container.css
@@ -1,11 +1,13 @@
 .card__like-container {
-    display: flex;
-    align-items: center;
-    flex-direction: column
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3px;
+}
   
   .card__like-count {
-    margin-top: 3px;
-    font-size: 13px;
-    line-height: 15.73px;
+    font-size: 15px;
+    font-weight: 400;
+    text-align: center;
+    line-height: normal;
   }
